--- a/templates/marketplace_financiador.html
+++ b/templates/marketplace_financiador.html
@@ -22,6 +22,8 @@
         <tr>
           <th>Folio</th>
           <th>Proveedor</th>
+          <th>Pagador</th>
+          <th>RUT Pagador</th>
           <th>Monto</th>
           <th>Fecha Vencimiento</th>
           <th>Acción</th>
@@ -32,6 +34,8 @@
       <tr>
         <td>{{ factura.folio }}</td>
         <td>{{ factura.razon_social_emisor }}</td>
+        <td>{{factura.razon_social_receptor or '_'}}</td>
+        <td>{{factura.rut_receptor or '-'}}</td>
         <td>{{ factura.monto }}</td>
         <td>{{ factura.fecha_vencimiento }}</td>
         <td>
@@ -61,9 +65,11 @@
         <tr>
           <th>Folio</th>
           <th>Proveedor</th>
+          <th>Pagador</th>
+          <th>RUT Pagador</th>
           <th>Monto</th>
           <th>Fecha Vencimiento</th>
-          <th>Estado</th>
+          <th>Acción</th>
         </tr>
       </thead>
       <tbody>
@@ -71,6 +77,8 @@
         <tr>
           <td>{{ f.folio }}</td>
           <td>{{ f.razon_social_emisor }}</td>
+          <td>{{ f.razon_social_receptor or '—' }}</td>
+          <td>{{ f.rut_receptor or '—' }}</td>
           <td>${{ '{:,.0f}'.format(f.monto) }}</td>
           <td>{{ f.fecha_vencimiento }}</td>
           <td>
@@ -95,9 +103,11 @@
         <tr>
           <th>Folio</th>
           <th>Proveedor</th>
+          <th>Pagador</th>
+          <th>RUT Pagador</th>
           <th>Monto</th>
           <th>Fecha Vencimiento</th>
-          <th>Estado</th>
+          <th>Acción</th>
         </tr>
       </thead>
       <tbody>
@@ -105,6 +115,8 @@
         <tr>
           <td>{{ f.folio }}</td>
           <td>{{ f.razon_social_emisor }}</td>
+          <td>{{ f.razon_social_receptor or '—' }}</td>
+          <td>{{ f.rut_receptor or '—' }}</td>
           <td>${{ '{:,.0f}'.format(f.monto) }}</td>
           <td>{{ f.fecha_vencimiento }}</td>
           <td>
